Fix perfect-scrollbar settings

--- a/app/assets/stylesheets/_grid.scss
+++ b/app/assets/stylesheets/_grid.scss
@@ -1,6 +1,7 @@
 .backgrid-container {
-    height: auto;
     padding-bottom: 0.25em;
+    overflow: hidden;
+    position: relative;
 }
 
 .backgrid {
@@ -50,4 +51,13 @@
         width: 3em;
         text-align: center;
     }
+}
+
+.ps-container {
+  .ps-scrollbar-x {
+    height: 10px;
+  }
+  .ps-scrollbar-y {
+    width: 10px;
+  }
 }
